json-api installed

--- a/legacy-rp-cad-frontend/app/styles/app.css
+++ b/legacy-rp-cad-frontend/app/styles/app.css
@@ -1,3 +1,9 @@
+* {
+    /* Resetting of margin and padding on all elements */
+    margin: 0;
+    padding: 0;
+}
+
 body {
     /* Font setting */
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
