--- a/legacy-rp-cad-frontend/app/styles/app.css
+++ b/legacy-rp-cad-frontend/app/styles/app.css
@@ -7,11 +7,119 @@
     box-sizing: border-box;
 }
 
-body {
-    /* Font setting */
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+html, body {
+    height: 100%;
 }
 
-.container {
-    
+body {
+    /* Font setting */
+    font-family: 'roboto', sans-serif;
+    line-height: 1.5;
+    font-weight: 400;
+
+    background-color: #2e2f32;
+    color: #FFFFFF;
+}
+
+a {
+    text-decoration: none;
+    color: #FFFFFF;
+}
+
+/* Different containers */
+.container-grid {
+    display: grid;
+    grid-template-columns: 0.2fr 1fr;
+    grid-template-rows: 0.1fr 1fr 0.1fr;
+    grid-template-areas:
+        'header header'
+        'sidebar main'
+        'sidebar footer';
+    height: 100vh;
+}
+
+/* Header */
+.header {
+    grid-area: header;
+    background-color: #000000;
+    display: flex;
+    align-items: center;
+}
+
+/* Sidebar */
+.sidebar {
+    grid-area: sidebar;
+    background-color: #191C20;
+}
+
+/* Main content area */
+.main {
+    grid-area: main;
+    background: #2e2f32;
+    padding: 2.75rem 2.25rem;
+    width: 100%;
+    flex-grow: 1;
+}
+
+/* Footer */
+.footer {
+    grid-area: footer;
+}
+
+/* Rows */
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -7.5px;
+    margin-left: -7.5px;
+}
+
+/* Navigation */
+.nav {
+    overflow: hidden;
+    list-style: none;
+}
+
+.sidebar .nav {
+
+}
+
+/* Navigation items */
+.nav-item {
+    line-height: 1;
+}
+
+.nav-item:hover {
+    background-color: white;
+    color: black;
+}
+
+.siderbar .nav-item {
+    padding: 12px;
+}
+
+/* Navigation links */
+.nav-link {
+
+}
+
+.side-bar .nav-link {
+    align-items: center;
+    display: flex;
+    padding: 15px 30px 15px 70px;
+    white-space: nowrap;
+}
+
+/* Menu title */
+.menu-title {
+    display: inline-block;
+    font-size: 15px;
+    vertical-align: middle;
+    font-weight: 500;
+}
+
+/* Menu arrow */
+.menu-arrow {
+    margin-left: auto;
+    margin-right: 0;
 }
