--- a/legacy-rp-cad-frontend/app/styles/app.scss
+++ b/legacy-rp-cad-frontend/app/styles/app.scss
@@ -9,6 +9,17 @@
     transition-duration: 0.145s;
 }
 
+html, body, #app {
+    /* ensure 100% height for document */
+    height: 100%;
+    height: 100vh;
+}
+
+body {
+    line-height: 1.7;
+}
+
+// Main application wrapper
 #app {
     display: flex;
     width: 100%;
@@ -17,4 +28,19 @@
 
 .content {
     width: 100%;
+}
+
+// Background images
+.bg {
+    /* Full height */
+    height: 100%;
+
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.bg-login {
+    background-image: url("../images/bg-police.png");
 }
