--- a/legacy-rp-cad-frontend/app/templates/index.hbs
+++ b/legacy-rp-cad-frontend/app/templates/index.hbs
@@ -1,29 +1,19 @@
-{{!-- Sidebar --}}
-<nav class="sidebar">
-    {{!-- Header inside the sidebar --}}
-    <div class="sidebar-header">
-        <h3>L-RP | CAD</h3>
+{{!-- Content side --}}
+<div class="col d-flex align-items-center p-5">
+    <div>
+        <h1>Login with your Steam account.</h1>
+        <p>
+            Authenticate with the CAD using the same Steam profile that you're using to play on Legacy Roleplay. The databases are connected, so 
+            we'll seemlessly be able to grab your information from the server.
+        </p>
+
+        {{!-- Login button --}}
+        <a class="btn btn-primary" href="http://127.0.0.1:8000/auth/login/steam">
+            <i class="fab fa-steam"></i>
+            Login with steam now
+        </a>
     </div>
+</div>
 
-    {{!-- Navigation --}}
-    <ul class="list-unstyled components">
-        <li>
-            <a href="#">Dashboard</a>
-        </li>
-        <li>
-            <a href="#">Something else</a>
-        </li>
-    </ul>
-</nav>
-
-{{!-- Page Content --}}
-<main class="content">
-    {{!-- Navigation bar --}}
-    <nav class="navbar">
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a href="#">Mr. Richardsen</a>
-            </li>
-        </ul>
-    </nav>
-</main>
+{{!-- Background side --}}
+<div class="col bg bg-login"></div>
