add option to specify redirect

--- a/legacy-rp-cad-frontend/app/templates/index.hbs
+++ b/legacy-rp-cad-frontend/app/templates/index.hbs
@@ -1,6 +1,6 @@
 {{!-- Content side --}}
 <div class="col d-flex align-items-center p-5">
-    <div>
+    <main>
         <h1>Login with your Steam account.</h1>
         <p>
             Authenticate with the CAD using the same Steam profile that you're using to play on Legacy Roleplay. The databases are connected, so 
@@ -12,7 +12,7 @@
             <i class="fab fa-steam"></i>
             Login with steam now
         </a>
-    </div>
+    </main>
 </div>
 
 {{!-- Background side --}}
