login bg hides on smaller devices

--- a/legacy-rp-cad-frontend/app/templates/index.hbs
+++ b/legacy-rp-cad-frontend/app/templates/index.hbs
@@ -15,5 +15,5 @@
     </main>
 </div>
 
-{{!-- Background side --}}
-<div class="col bg bg-login"></div>
+{{!-- Background side. Hide on smaller devices. --}}
+<div class="col d-none d-md-block bg bg-login"></div>
